--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "material-icons": "^1.10.11"
   }
 }
